--- a/index.html
+++ b/index.html
@@ -2,29 +2,72 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>An Actual Website</title>
         <link rel="stylesheet" href="./styles.css">
+        <title>Webpage 1</title>
     </head>
     <body>
-        <main class="firstP">
-            <div>
-fafaf
-            </div>
-            <div>
-afaffa
-            </div>
-        </main>
-        <section class="secondP">
-dfsf
+        <section class="header flexy">
+            <span class="text1">Header Logo</span>
+            <span class="text2">
+                <ul class="flexy1">
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </span>
         </section>
-        <section class="thirdP">
-sdff
+        <section class="first flexy">
+            <div class="wtfmargin">
+                <p class="text1">This website is awesome</p>
+                <p class="text2 boxed-text">This website has some subtext that goes here under the main title. It's a smaller font and color is lower contrast</p>
+                <button>Sign up</button>
+            </div>
+            <div class="img">
+                this is a placeholder for an image
+            </div>
         </section>
-        <section class="fourthP">
-sdfsf
+        <section class="second flexy">
+            <div class="header2">
+                Some random information.
+            </div>
+            <div class="images flexy">
+                <div class="imagesi">
+                    <div class="img2"></div>
+                    this is some subtext under an illustration or image
+                </div>
+                <div class="imagesi">
+                    <div class="img2"></div>
+                    this is some subtext under an illustration or image
+                </div>
+                <div class="imagesi">
+                    <div class="img2"></div>
+                    this is some subtext under an illustration or image
+                </div>
+                <div class="imagesi">
+                    <div class="img2"></div>
+                    this is some subtext under an illustration or image
+                </div>
+            </div>
+        </section>
+        <section class="third flexy">
+            <div class="quote">
+                <p class="p1">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+                <p class="p2">-Thor, God of Thunder</p>
+            </div>
+        </section>
+        <section class="fourth flexy">
+            <div class="blueBox">
+                <div>
+                    <h2>Call to action! It's time!</h2>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button class="other">
+                    Sign up!
+                </button>
+            </div>
         </section>
         <section class="footer">
-sfsf
+            Copyright C The Odin Project 2021
         </section>
     </body>
 </html>
